# 2_Key_Board

./: .gitignore  CMakeLists.txt  README.md  c_style.astyle  format.sh
Firmware/: CMakeLists.txt  c_style.astyle
Firmware/cmsis/: core_cmFunc.h  sam.h  samd21e17a.h
Firmware/cmsis/component/: adc.h  dsu.h  evsys.h  hmatrixb.h  mtb.h  nvmctrl.h  pm.h  port.h  sercom.h  tc.h
Firmware/core/inc/: timer.h
Firmware/core/src/: main.c  startup_samd21.c  timer.c  usb_descriptors.c
Firmware/hw/config/: hpl_sercom_config.h  hpl_sysctrl_config.h
Firmware/hw/hal/include/: hal_adc_sync.h  hal_atomic.h  hal_dac_sync.h  hal_flash.h  hal_init.h  hal_spi_m_dma.h  hal_usart_async.h  hpl_adc_dma.h  hpl_dac_async.h  hpl_dac_sync.h  hpl_flash.h  hpl_gpio.h  hpl_i2c_m_async.h  hpl_i2c_m_sync.h  hpl_i2c_s_sync.h  hpl_pwm.h  hpl_spi_dma.h  hpl_spi_m_async.h  hpl_spi_s_sync.h  hpl_timer.h  hpl_usb.h  hpl_usb_device.h  hpl_usb_host.h
Firmware/hw/hal/src/: hal_atomic.c  hal_calendar.c  hal_dac_sync.c  hal_flash.c  hal_init.c  hal_spi_m_dma.c  hal_timer.c  hal_usb_device.c
Firmware/hw/hal/utils/include/: utils.h  utils_assert.h  utils_event.h  utils_ringbuffer.h
Firmware/hw/hal/utils/src/: utils_event.c  utils_list.c  utils_ringbuffer.c
Firmware/hw/hpl/adc/: hpl_adc.c
Firmware/hw/hpl/core/: hpl_core_port.h
Firmware/hw/hpl/dac/: hpl_dac.c
Firmware/hw/hpl/gclk/: hpl_gclk.c
Firmware/hw/hpl/pm/: hpl_pm_base.h
Firmware/hw/hpl/rtc/: hpl_rtc.c
Firmware/hw/hpl/sercom/: hpl_sercom.c
Firmware/hw/hpl/systick/: hpl_systick.c
Firmware/hw/hri/: hri_ac_d21.h  hri_dmac_d21.h  hri_eic_d21.h  hri_gclk_d21.h  hri_i2s_d21.h  hri_mtb_d21.h  hri_rtc_d21.h  hri_sercom_d21.h  hri_sysctrl_d21.h  hri_systick_d21.h  hri_tcc_d21.h  hri_wdt_d21.h
Firmware/linker/: samd21e17d.ld
Firmware/openocd/: openocd.cfg
Firmware/tinyusb/: tusb.c  tusb.h  tusb_option.h
Firmware/tinyusb/class/: hid.h  hid_device.c  hid_device.h  hid_host.c  hid_host.h
Firmware/tinyusb/common/: tusb_common.h  tusb_compiler.h  tusb_error.h  tusb_fifo.c  tusb_fifo.h  tusb_timeout.h  tusb_types.h  tusb_verify.h
Firmware/tinyusb/device/: dcd.h  dcd_attr.h  usbd.c  usbd.h  usbd_control.c  usbd_pvt.h
Firmware/tinyusb/osal/: osal.h  osal_freertos.h  osal_mynewt.h  osal_none.h  osal_pico.h  osal_rtthread.h
Firmware/tinyusb/portable/: dcd_samd.c
Hardware/: BOM.csv
Hardware/Case/: Case_Lower.STEP  Case_Upper.STEP
Hardware/Electrical/: 2_Key_Board.PrjPcb  Board.PcbDoc  Main_Sheet.SchDoc
cmsis/: core_cm0plus.h  core_cmInstr.h
cmsis/component/: ac.h  dac.h  dmac.h  eic.h  gclk.h  i2s.h  pac.h  rtc.h  sysctrl.h  tcc.h  usb.h  wdt.h
core/inc/: ext_interrupt.h  hal_gpio.h  tusb_config.h
core/src/: ext_interrupt.c  main.c  usb_descriptors.c
hw/config/: hpl_gclk_config.h  hpl_tc_config.h  usbd_config.h
hw/hal/include/: hal_calendar.h  hal_gpio.h  hal_i2c_m_sync.h  hal_io.h  hal_pwm.h  hal_spi_m_sync.h  hal_timer.h  hal_usb_device.h  hpl_adc_async.h  hpl_adc_sync.h  hpl_calendar.h  hpl_dma.h  hpl_i2c_s_async.h  hpl_reset.h  hpl_spi.h  hpl_spi_async.h  hpl_spi_m_dma.h  hpl_spi_m_sync.h  hpl_spi_s_async.h  hpl_spi_sync.h  hpl_usart.h  hpl_usart_async.h  hpl_usart_sync.h  hpl_user_area.h
hw/hal/src/: hal_adc_sync.c  hal_delay.c  hal_gpio.c  hal_i2c_m_sync.c  hal_io.c  hal_pwm.c  hal_sleep.c  hal_spi_m_sync.c  hal_usart_async.c
hw/hal/utils/include/: utils_list.h
hw/hal/utils/src/: utils_assert.c  utils_syscalls.c
hw/hpl/core/: hpl_core_m0plus_base.c  hpl_init.c
hw/hpl/dmac/: hpl_dmac.c
hw/hpl/gclk/: hpl_gclk_base.h
hw/hpl/nvmctrl/: hpl_nvmctrl.c
hw/hpl/pm/: hpl_pm.c
hw/hpl/port/: hpl_gpio_base.h
hw/hpl/sysctrl/: hpl_sysctrl.c
hw/hpl/tc/: hpl_tc.c
hw/hpl/usb/: hpl_usb.c
hw/hri/: hri_adc_d21.h  hri_dac_d21.h  hri_dsu_d21.h  hri_evsys_d21.h  hri_hmatrixb_d21.h  hri_nvic_d21.h  hri_nvmctrl_d21.h  hri_pac_d21.h  hri_pm_d21.h  hri_port_d21.h  hri_systemcontrol_d21.h  hri_tc_d21.h  hri_usb_d21.h
linker/: samd21e17d.ld
